--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
+    "kue": "^0.11.6",
     "mongoose": "^5.9.18",
     "node-sass-middleware": "^0.11.0",
+    "nodemailer": "^6.4.10",
     "nodemon": "^2.0.4",
     "passport": "^0.4.1",
     "passport-google-oauth": "^2.0.0",
